<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".Location">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Sistema de Reportes de Afectaciones"
            android:textStyle="bold"
            android:textSize="25dp"
            />

    </FrameLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/texto_bienvenida_p1"
        android:textStyle="italic"
        android:textAlignment="viewStart"
        android:padding="4dp"
        android:justificationMode="inter_word"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/texto_bienvenida_p2"
        android:textStyle="italic"
        android:textAlignment="viewStart"
        android:padding="4dp"
        android:justificationMode="inter_word"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/texto_bienvenida_p3"
        android:textStyle="italic"
        android:textAlignment="textStart"
        android:paddingTop="4dp"
        android:paddingHorizontal="4dp"
        android:paddingBottom="20dp"
        android:justificationMode="inter_word"

        />

    <Button
        android:id="@+id/btnReportar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Reportar Afectación"
        app:cornerRadius="20dp"
        />

</LinearLayout>